--- a/index.html
+++ b/index.html
@@ -1,94 +1,115 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Modern Login</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #8e9eab, #eef2f3);
-    }
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sarojininaidu_Resume</title>
+    <link rel="shortcut icon" href="ion.webp" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="title">My Portfolio</h1>
+      <hr />
+      <section class="summary">
+        <h3>Summary</h3>
+        <p>I am Bugata Sarojininaidu, a passionate Full Stack Developer with a knack for innovation and building impactful digital solutions.</p>
+        <img src="Naidu.jpeg" alt="profile icon" class="profile-img" />
+      </section>
 
-    .login-container {
-      background: white;
-      padding: 2.5rem;
-      border-radius: 1rem;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
-      width: 100%;
-    }
+      <hr />
+      <section class="skills">
+        <h3>Skills</h3>
+        <div class="skill-lists">
+          <div>
+            <h5>Technical</h5>
+            <ol type="I">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>Python</li>
+              <li>C</li>
+              <li>Java</li>
+            </ol>
+          </div>
+          <div>
+            <h5>Non-Technical</h5>
+            <ul>
+              <li>Public Speaking</li>
+              <li>Leadership</li>
+              <li>Strategic Planning</li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
-    .login-title {
-      font-weight: 700;
-      font-size: 1.8rem;
-      color: #5c4d7d;
-    }
+      <hr />
+      <section class="education">
+        <h3>Education</h3>
+        <table>
+          <thead>
+            <tr>
+              <th>Sl. No</th>
+              <th>Institution</th>
+              <th>Board</th>
+              <th>YOP</th>
+              <th>Percentage</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Vignan University</td>
+              <td>University</td>
+              <td>2026</td>
+              <td>87%</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Narayana College</td>
+              <td>State Board</td>
+              <td>2023</td>
+              <td>87%</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>The Synergy School</td>
+              <td>SSC</td>
+              <td>2021</td>
+              <td>98%</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
 
-    .form-control {
-      border-radius: 50px;
-      padding: 0.75rem 1rem;
-    }
+      <hr />
+      <section class="contact">
+        <h3>Contact Me</h3>
+        <form>
+          <input type="text" placeholder="Enter name" />
+          <input type="email" placeholder="Enter email" />
+          <input type="number" placeholder="Enter phone" />
+          <textarea placeholder="Enter your message"></textarea>
+          <button type="submit">Submit</button>
+        </form>
+      </section>
 
-    .btn-login {
-      background-color: #5c4d7d;
-      color: #fff;
-      border-radius: 50px;
-      font-weight: 600;
-    }
-
-    #res {
-      margin-top: 1rem;
-      font-weight: 500;
-      text-align: center;
-    }
-  </style>
-</head>
-<body class="d-flex justify-content-center align-items-center vh-100">
-
-  <div class="login-container">
-    <h2 class="text-center login-title mb-4">Welcome Back</h2>
-    <div class="mb-3">
-      <input type="number" class="form-control" id="num" placeholder="Phone Number" />
+      <hr />
+      <section class="social">
+        <h3>Social Links</h3>
+        <div class="icons">
+          <a href="https://www.linkedin.com/in/akshay-guptha" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/akshayguptha" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.hackerrank.com/akshayguptha" target="_blank"><i class="fa-brands fa-hackerrank"></i></a>
+          <a href="https://www.youtube.com/@akshayguptha" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+      </section>
     </div>
-    <div class="mb-3">
-      <input type="password" class="form-control" id="pass" placeholder="Password" />
-    </div>
-    <button class="btn btn-login w-100" onclick="login()">Login</button>
-    <p id="res"></p>
-  </div>
-
-  <script>
-    function checkPhone(phone) {
-      return /^\d{10}$/.test(phone);
-    }
-
-    function checkPass(pass) {
-      return pass.length >= 6;
-    }
-
-    function login() {
-      const phone = document.getElementById("num").value;
-      const pass = document.getElementById("pass").value;
-      const result = document.getElementById("res");
-
-      if (!checkPhone(phone)) {
-        result.innerText = "Invalid phone number!";
-        result.style.color = "red";
-        return;
-      }
-
-      if (!checkPass(pass)) {
-        result.innerText = "Password must be at least 6 characters.";
-        result.style.color = "red";
-        return;
-      }
-
-      result.innerText = "Login successful!";
-      result.style.color = "green";
-    }
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
